fix auto hover of nav overlap bug

--- a/css/style.less
+++ b/css/style.less
@@ -599,6 +599,9 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px purple;
 	li.active{
 		border-bottom: 0px solid black;
 	}
+	li span{
+		padding-left: 5px;
+	}
 }
 
 /* 自定义的checkbox */
